# RustBot

./: .env  .gitignore  README.md  index.js  package-lock.json  package.json  tsconfig.json
node/: index.ts  package.json
rust/: Cargo.toml  rustfmt.toml
rust/src/: main.rs
