[package]
name = "rust_bot"
version = "0.1.0"
authors = ["safinsingh <safin.singh@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.10", features = ["json"] }
lazy_static = "1.4.0"
regex = "1.4.2"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
tokio = { version = "0.2", features = ["full"] }

[dependencies.serenity]
version = "0.9.3"
default_features = false
features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "model",
    "http",
    "utils",
    "rustls_backend"
]
